--- a/vignettes/gtfs2emis-vignette.Rmd
+++ b/vignettes/gtfs2emis-vignette.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 
 # Introduction
 
-The package `gtfs2emis` estimates hot exhaust emissions of public transport systems based on GTFS and fleet data. This vignette introduces the main functions of the package. Here are the following packages we will use:
+The package `gtfs2emis` estimates hot exhaust emissions of public transport systems based on GTFS and fleet data. This vignette introduces the main functions of the package. We will use the following packages:
 
 ```{r, message = FALSE}
 library(data.table)
@@ -48,39 +48,38 @@ You can install `gtfs2emis`:
 ```
 # Approach
 
-The package has two main usages, that will ultimately depends on user experience and desired output:
+The package has two main usages that will ultimately depends on the user's
+experience and on the desired output:
 
 **1. Basic usage**
 
-
-- Emissions inventory is straightforward, making it more friendly for newer users
-- It is divided into `transport_model()` and `emissions_model()` functions
-- In the `emissions_model()` user should specify the source of emission factors
-- Uses several default approaches for hot exhaust emissions inventory
-- Considers the fleet to be homogeneously distributed across the vehicle routes
+- Emissions inventory is straightforward, making it more friendly for new users;
+- It is divided into `transport_model()` and `emissions_model()` functions;
+- In the `emissions_model()` the user specifies the source of emission factors;
+- It uses several default approaches for hot exhaust emissions inventory;
+- It considers the fleet to be homogeneously distributed across the vehicle routes.
 
 **2. Detailed usage**
 
-- It uses step-by-step functions to produce the transport and emissions model: User can specific any correction on speeds distribution, routes;
-- Allocation of specific vehicle into predefined routes e.g. Articulated buses into the specific shape_id's;
-- Adjusting emissions factors (fuel correction, scaling non-speed dependent EF with Environmental European Agency (EMEP-EEA) emissions factors, checking emission factors before using in the inventory).
+- It uses step-by-step functions to produce the transport and emissions model: User can specific any correction on speed distribution over routes;
+- It allocates specific vehicles into predefined routes, e.g. articulated buses into specific shape_id's;
+- It adjusts emissions factors (fuel correction, scaling non-speed dependent emission factors with Environmental European Agency (EMEP-EEA) emissions factors, checking emission factors before using in the inventory).
 
 
 ## Basic Usage
 
 **1. Read data**\
-First step is to define the GTFS and the desired route to model emissions. Here we use a one example of `shape_id == "176-1"` in Porto Alegre (Brazil). Detailed functions of GTFS editing can be found in `gtfs2gps` and `gtfstools` R package.
-
+The first step selects the GTFS and the desired route to model emissions. Here we use one example of `shape_id == "176-1"` in Porto Alegre (Brazil). Detailed functions of GTFS editing can be found in `gtfs2gps` and `gtfstools` packages.
 
 ```{r, message = FALSE}
-gtfs <- read_gtfs(system.file("extdata/poa.zip", package="gtfs2gps")) %>%
+gtfs <- read_gtfs(system.file("extdata/poa.zip", package = "gtfs2gps")) %>%
   filter_week_days() %>%
-  filter_by_shape_id(.,"176-1") %>% 
+  filter_by_shape_id(., "176-1") %>% 
   filter_single_trip()
 ```
 
 **2. Transport model**\
-The transport model functions accepts either the gtfs data and filepath of the data. It is a function that transform the GTFS into GPS data.table like format, correct extreme or missing values of speed and transform in a sf-linestring format — the input we need to emissions estimates.
+The `transport_model()` accepts either a GTFS data or a filepath where the data is stored. It converts the GTFS into a GPS-like data.table, fixing extreme or missing values of speed and transforming the output into a sf-linestring, which is the required input for emissions estimates.
 
 ```{r, message = FALSE}
 sf_line <- transport_model(gtfs = gtfs,parallel = TRUE)
@@ -93,13 +92,13 @@ plot(sf_line["trip_number"])
 ```
 
 **3. Fleet data**\
-As the transport model are generated, we advance to estimate the hot exhaust emissions.
-We create a data frame with fleet information, which can be imported from an external file. There are two main key features of fleet data:
+After generating the transport model, we advance to estimate the hot exhaust emissions.
+We create a data.frame with fleet information, which can also be imported from an external file. There are two main key features of fleet data:
 
-- If the user has data of fleet but do not have information on which bus is assigned to each route (e.g Articulated buses to `shape_id` `XX`, `YY` or `ZZ`), user can assign a probability distribution into the route.  If the vehicle is known (probability = 1), then only one vehicle class should be assigned. The probability sum be one.
-- The fleet data needs to be organized according to the desired emission factor database. For instance, if Users wants to estimate emissions based on typical European fleet, they should present the data according the the typical emission factors inputs for Emep-EEA methodology. In this example the data is organized according to the requirements for `ef_emep_europe()` emission factor data. Users can check in `ef_moves_usa()`, `ef_emfac_usa()`, `ef_cetesb_brazil()` or `ef_emep_europe()` how the fleet should be organized.
+- If the user has fleet data but does not have information on the relations between buses and routes (e.g Articulated buses to `shape_id` `XX`, `YY` or `ZZ`), she can assign a probability of each fleet type into the routes.  If the class of a given route is known, the probability is equals to 1, always assigning the same class to the route. The sum of all probabilities of each route must be one.
+- The fleet data needs to be organized according to the desired emission factor database. For instance, if the user wants to estimate emissions based on typical European fleet, she must present the data according to the typical emission factors inputs for Emep-EEA methodology. In this example, the data is organized according to the requirements for `ef_emep_europe()` emission factor data. Users can check in `ef_moves_usa()`, `ef_emfac_usa()`, `ef_cetesb_brazil()` or `ef_emep_europe()` how the fleet must be organized.
 
-In the example of european emission factors, we are presenting three vehicles classes. This means the a certain `shape_id` has 40\%, 50\%, and 10\% chance of having `Ubus Midi <=15 t`, `Ubus Std 15 - 18 t`, and `Ubus Artic >18 t `, respectively.  
+In the example of European emission factors, we use three vehicles classes. A given `shape_id` has 40\%, 50\%, and 10\% chance of having `Ubus Midi <=15 t`, `Ubus Std 15 - 18 t`, and `Ubus Artic >18 t`, respectively.  
 
 ```{r, message = FALSE}
 fleet_data_ef_europe <- data.table::data.table("veh_type" = c("Ubus Midi <=15 t"
@@ -111,7 +110,9 @@ fleet_data_ef_europe <- data.table::data.table("veh_type" = c("Ubus Midi <=15 t"
                                                ,"fleet_composition" = c(0.4,0.5,0.1))
 fleet_data_ef_europe
 ```
-This data.table are quite similar to other emissions factors database sources: Emission Factor Model (California Air Resources Board);
+This data.table is quite similar to other emissions factors database sources. Three other examples are described below.
+
+Emission Factor Model (California Air Resources Board):
 
 ```{r, message = FALSE}
 fleet_data_ef_emfac <- data.table::data.table("veh_type" = "BUS_URBAN_D"
@@ -121,7 +122,7 @@ fleet_data_ef_emfac <- data.table::data.table("veh_type" = "BUS_URBAN_D"
                                               ,"fleet_composition" = rep(0.2,5))
 fleet_data_ef_emfac
 ```
- MOtor Vehicle Emission Simulator (MOVES) from Environmental Protection Agency (United States);
+ MOtor Vehicle Emission Simulator (MOVES) from Environmental Protection Agency (United States):
 ```{r, message = FALSE}
 fleet_data_ef_moves <- data.table::data.table("veh_type" = "BUS_URBAN_D"
                                               ,"model_year" = 2011:2015
@@ -131,19 +132,19 @@ fleet_data_ef_moves <- data.table::data.table("veh_type" = "BUS_URBAN_D"
 fleet_data_ef_moves
 ```
 
-Environmental Company of São Paulo (CETESB, Brazil).
+Environmental Company of São Paulo (CETESB, Brazil):
 ```{r, message = FALSE}
 fleet_data_ef_cetesb <- data.table::data.table("veh_type" = c("BUS_MICRO_D"
                                                               ,"BUS_URBAN_D"
                                                               ,"BUS_ARTIC_D")
-                                               ,"model_year" = rep(2010,3)
-                                               ,"fuel" = rep("D",3)
-                                               ,"fleet_composition" = c(0.4,0.4,0.2))
+                                               ,"model_year" = rep(2010, 3)
+                                               ,"fuel" = rep("D", 3)
+                                               ,"fleet_composition" = c(0.4, 0.4, 0.2))
 fleet_data_ef_cetesb
 ```
 
 **4. Emissions model**\
-To generate the emission results, we couple the results from `transport_model()` along with the `fleet_data` previously imported. The `emission_model` generated a list of several files of interests on emissions, which can be related to vehicle variables (`fuel`, `age`, `tech`, `euro`, `fleet_composition`), travel variables (`slope`, `load`, `gps`) or pollution (`EF`, `emi`).
+To generate the emission results, we couple the results from `transport_model()` along with the `fleet_data` previously imported. The `emission_model` generates a list of several files related to emissions, storing information such as vehicle variables (`fuel`, `age`, `tech`, `euro`, `fleet_composition`), travel variables (`slope`, `load`, `gps`) or pollution (`EF`, `emi`).
 
 ```{r, message = FALSE}
 sf_emis <- emission_model(gps = sf_line
@@ -155,7 +156,7 @@ names(sf_emis)
 ```
 
 **5. Data post-processing**\
-As the results are generated in a long list, gtfs2emis package has several function to post-processing the results. `emis_summary` summarizes the emissions according to the variable of interest, such as vehicle type `veh_type`, `pollutant` or `time`. In this last case, we need to add a `time_column` in the list, as this information is not shown by the `emission_model()` function.
+As the results are stored in a long list, gtfs2emis package has several function to post-process the results. `emis_summary` summarizes the emissions according to the variable of interest, such as vehicle type `veh_type`, `pollutant`, or `time`. In the last case, we need to add a `time_column` in the list, as this information is not returned by `emission_model()`.
 
 ```{r, message = FALSE}
 sf_emis$time_column <- sf_emis$gps$timestamp
@@ -169,7 +170,7 @@ my_emis_summary <- emis_summary(emi_list = sf_emis,
                     pol_var = "pollutant") 
 my_emis_summary
 ```
-Visualize results by vehicle type `veh_type`
+To visualize results by vehicle type `veh_type`:
 ```{r, message = FALSE}
 my_emis_summary <- emis_summary(emi_list = sf_emis,
                                  emi_var = "emi", 
@@ -179,17 +180,17 @@ my_emis_summary <- emis_summary(emi_list = sf_emis,
                                  pol_var = "pollutant") 
 my_emis_summary
 ```
-If available in `names(sf_emis)` you can add extra argument about fleet.
+If available in `names(sf_emis)`, it is possible to add extra argument about fleet.
 ```{r, message = FALSE}
 my_emis_summary <- emis_summary(emi_list = sf_emis,
                                 emi_var = "emi", 
                                 by = "veh_type", 
                                 time_column = "time_column",
-                                veh_var = c("veh_type","euro","fuel"),
+                                veh_var = c("veh_type", "euro", "fuel"),
                                 pol_var = "pollutant") 
 my_emis_summary
 ```
-Checking the results by pollutant
+Checking the results by pollutant:
 ```{r, message = FALSE}
 my_emis_summary <- emis_summary(emi_list = sf_emis,
                                  emi_var = "emi", 
@@ -199,18 +200,18 @@ my_emis_summary <- emis_summary(emi_list = sf_emis,
                                  pol_var = "pollutant") 
 my_emis_summary
 ```
-If user just wanted to have all results in a data.table format
+If the user wants to have all results in a data.table format:
 ```{r, message = FALSE}
 sf_emis$time_column <- sf_emis$gps$timestamp
 my_emis_dt <- emi_to_dt(emi_list = sf_emis
                     ,emi_vars = "emi"
-                    ,veh_vars = c("veh_type","euro","fuel")
-                    ,pol_vars =  "pollutant"
+                    ,veh_vars = c("veh_type", "euro", "fuel")
+                    ,pol_vars = "pollutant"
                     ,segment_vars = "time_column")
-head(my_emis_dt,5)
+head(my_emis_dt, 5)
 ```
 
-To visualize emissions spatially in a grid, user should provide info about the desired grid. An operation of intersection is done using `emis_grid()`. Here, we use `vein::make_grid()` to produce a basic grid.
+To visualize emissions spatially in a grid, the user nees to provide info about the desired grid. An operation of intersection can be done using `emis_grid()`. Here, we use `vein::make_grid()` to produce a basic grid.
 
 ```{r, message = FALSE}
 grid_gps <- vein::make_grid(spobj = sf_emis$gps, width =  0.25 / 102.47) # 500 meters
@@ -223,7 +224,7 @@ names(sf_emis$emi)
 sf_emis$gps <- cbind(sf_emis$gps,sf_emis$emi)
 
 pol_grid <- emis_grid(data = sf_emis$gps,
-                     emi = c("CO_Euro_IV"),
+                     emi = "CO_Euro_IV",
                      grid = grid_gps,
                      time_class = 'all periods')
 plot(pol_grid["CO_Euro_IV"])
@@ -231,12 +232,12 @@ plot(pol_grid["CO_Euro_IV"])
 
 ## Detailed Usage
 
-The detailed usage of `gtfs2emis` has intermediate functions to generate the transport and emissions model. In this case, user can provide data of fleet distributed according to routes.
+The detailed usage of `gtfs2emis` has intermediate functions to generate the transport and emissions model. In this case, the user can provide data of fleet distributed according to routes.
 
 **1. Read data**
 
-Users can provide a vehicle specific data for each shape_id
-The example below shows a situation where the vehicle characteristics is known for three shape_ids (`T2-1`,`A141-1`, `176-1`), but is unknown for `R10-2`
+Users can provide a vehicle specific data for each `shape_id`.
+The example below shows a situation where the vehicle characteristics is known for three `shape_id`s (`T2-1`,`A141-1`, `176-1`), but is unknown for `R10-2`:
 
 ```{r,message=FALSE}
 gtfs <- read_gtfs(system.file("extdata/poa.zip", package="gtfs2gps")) %>%
@@ -250,7 +251,7 @@ gps_poa <- gtfs2gps(gtfs)
 data.table::setDT(gps_poa)
 ```
 
-Here we can define different ranges of minimum and maximum allowed speeds, as well as average speed. In this case, we considered the average speed of 34 km/h.
+We can also define different ranges of minimum and maximum allowed speeds, as well as average speed. In this case, we consider the average speed of 34 km/h.
 
 ```{r}
 gps_poa_fix <- adjust_speed(gps_data = gps_poa
@@ -259,12 +260,12 @@ gps_poa_fix <- adjust_speed(gps_data = gps_poa
                             ,new_speed = 34
                             ,clone = TRUE)
 ```
-To linestring
+To convert the output to linestring:
 
 ```{r}
 linestring_poa <- gps_as_sflinestring(gps_poa_fix)
 ```
-Checking some basic statistics of the transport model.
+Checking some basic statistics of the transport model:
 ```{r, fig.width=4,fig.height=6}
 data.table::setDT(linestring_poa)
 # speeds
@@ -274,12 +275,11 @@ linestring_poa[,mean(dist),by=shape_id]
 linestring_poa[,max(dist),by=shape_id]
 # plot
 plot(sf::st_as_sf(linestring_poa)["shape_id"],lwd=3)
-
 ```
 
 **2. Fleet**
 
-Users can provide a vehicle specific data for each shape_id The example below shows a situation where the  vehicle characteristics is known for three shape_ids (`T2-1`,`A141-1`, `176-1`) but is unknown for `R10-2`
+Users can provide a vehicle specific data for each `shape_id`. The example below shows a situation where the  vehicle characteristics is known for three `shape_id`s (`T2-1`,`A141-1`, `176-1`) but is unknown for `R10-2`:
 ```{r}
 fleet_data_ef_europe <- data.table::data.table("veh_type" = rep(c("Ubus Midi <=15 t"
                                                                   ,"Ubus Std 15 - 18 t"
@@ -293,39 +293,39 @@ fleet_data_ef_europe <- data.table::data.table("veh_type" = rep(c("Ubus Midi <=1
 fleet_data_ef_europe
 ```
 
- the sum of fleet composition per shape_id can be checked
+The sum of fleet composition per `shape_id` can also be checked:
 ```{r}
 fleet_data_ef_europe[,sum(fleet_composition),by = shape_id]
 ```
 
 **3. Visualizing the Emission factors**
 
-We use the european database of EF. We can plot the EF to check how it behaves according to `speed`, `veh_type`
+We use the european database of emission factors (EF). We can plot the EF to check how it behaves according to `speed` and `veh_type`:
 
 ```{r,message = FALSE}
 ef_europe <- ef_emep_europe(speed = units::set_units(10:100,"km/h")
                             ,veh_type = c("Ubus Midi <=15 t"
                                           ,"Ubus Std 15 - 18 t"
                                           ,"Ubus Artic >18 t")
-                            ,euro = c("III","IV","V")
-                            ,pollutant = c("CO2","NOx")
-                            ,fuel = rep("D",3)
-                            ,tech = c("-","SCR","SCR")
+                            ,euro = c("III", "IV", "V")
+                            ,pollutant = c("CO2", "NOx")
+                            ,fuel = rep("D", 3)
+                            ,tech = c("-", "SCR", "SCR")
                             ,as_list = TRUE)
 ```
-We can use the `emi_to_dt()` to process EF
+We can use the `emi_to_dt()` to process EF:
 ```{r}
 ef_europe$speed <- units::set_units(10:100,"km/h")
 ef_europe_dt <- emi_to_dt(emi_list = ef_europe
                           ,emi_vars = "EF"
-                          ,veh_vars = c("veh_type","fuel","euro","tech")
+                          ,veh_vars = c("veh_type", "fuel", "euro", "tech")
                           ,pol_vars = "pollutant"
                           ,segment_vars = "speed")
 ```
- lets use a fleet name as veh_type / euro_type
+Let us now use a fleet name defined as as veh_type / euro_type
 ```{r, fig.width=7,fig.height=3}
 setDT(ef_europe_dt)
-ef_europe_dt[,name_fleet := paste0(veh_type," / Euro ",euro)]
+ef_europe_dt[,name_fleet := paste0(veh_type, " / Euro ", euro)]
 
 # plot
 library(ggplot2)
@@ -337,7 +337,7 @@ ggplot(ef_europe_dt) +
  
 **4. Emissions estimates**
 
-As the emissions varies with shape_id and fleet, we compute emissions separately, in a loop.
+As the emissions varies with `shape_id` and `fleet`, we compute emissions separately, in a loop.
 
 ```{r}
 linestring_poa$shape_id %>% unique()
@@ -363,7 +363,7 @@ emi_data <- lapply(unique(gps_poa$shape_id),function(i){
 
 **5. Emission into grid**
 
-We show here the example for `CO2` emissions
+We now show the example for `CO2` emissions.
 
 ```{r}
 # Create Grid
@@ -386,10 +386,10 @@ tmp_emis_dt <- lapply(1:length(emi_data),function(i){ # i = 3
 }) %>% data.table::rbindlist()
 ```
 
-Summing all emissions and plotting
+Summing all emissions and plotting:
 
 ```{r, fig.width=4,fig.height=4}
-tmp_emis_dt <- tmp_emis_dt[,total_emi := sum(emi),by = id][,.SD[1],by=id]
+tmp_emis_dt <- tmp_emis_dt[,total_emi := sum(emi), by = id][, .SD[1], by = id]
 tmp_emis_dt2 <- sf::st_as_sf(tmp_emis_dt)
 
 plot(tmp_emis_dt2["emi"])
