--- a/vignettes/gtfs2emis_intro_vignette.Rmd
+++ b/vignettes/gtfs2emis_intro_vignette.Rmd
@@ -8,7 +8,7 @@ urlcolor: blue
 vignette: |
   %\VignetteIndexEntry{Introduction to gtfs2emis} 
   %\VignetteEngine{knitr::rmarkdown} 
-  \usepackage[utf8]{inputenc}
+  %\VignetteEncoding{UTF-8}
 ---
 
 ```{r, include = FALSE}
@@ -127,53 +127,55 @@ Now, the fleet data needs to be organized according to the data requirements of 
 |`ef_emfac_usa()`        |US     | MOVES U.S EPA | Urban Buses                  | Age, Fuel                                |
 
 
+Here are a few examples of data.frames with the fleet characteristics required by different emission factor models. Note that the table includes a column `fleet_composition`. This column tells what proportion of the fleet is represented by vehicles with each characteristic.
 
+**Europe: EMEP/EEA**
 
 ```{r, message = FALSE}
-fleet_data_ef_europe <- data.frame("veh_type" = c("Ubus Midi <=15 t"
-                                                              ,"Ubus Std 15 - 18 t"
-                                                              ,"Ubus Artic >18 t")
-                                               ,"euro" = c("III","IV","V")
-                                               ,"fuel" = rep("D",3)
-                                               ,"tech" = c("-","SCR","SCR")
-                                               ,"fleet_composition" = c(0.4,0.5,0.1))
+fleet_data_ef_europe <- data.frame(  "veh_type" = c("Ubus Midi <=15 t","Ubus Std 15 - 18 t" ,"Ubus Artic >18 t")
+                                   , "euro" = c("III","IV","V")
+                                   , "fuel" = rep("D",3)
+                                   , "tech" = c("-","SCR","SCR") #[666] o q significa o tracinho? nao tem info de tech daquele veiculo? nesse caso, o q o modelo faz?
+                                   , "fleet_composition" = c(0.4,0.5,0.1)) #
 fleet_data_ef_europe
 ```
-This data.table is quite similar to other emissions factors database sources. Three other examples are described below.
 
-Emission Factor Model (California Air Resources Board):
+
+**United States: EMFAC - California Air Resources Board**
 
 ```{r, message = FALSE}
-fleet_data_ef_emfac <- data.frame("veh_type" = "BUS_URBAN_D"
-                                              ,"model_year" = 2011:2015
-                                              ,"fuel" = "D"
-                                              ,"calendar_year" = 2019
-                                              ,"fleet_composition" = rep(0.2,5))
+fleet_data_ef_emfac <- data.frame(  "veh_type" = "BUS_URBAN_D"
+                                  , "model_year" = 2011:2015
+                                  , "fuel" = "D"
+                                  , "calendar_year" = 2019
+                                  , "fleet_composition" = rep(0.2,5))
 fleet_data_ef_emfac
 ```
- MOtor Vehicle Emission Simulator (MOVES) from Environmental Protection Agency (United States):
+
+United States: Motor Vehicle Emission Simulator (MOVES) from Environmental Protection Agency:
 ```{r, message = FALSE}
-fleet_data_ef_moves <- data.frame("veh_type" = "BUS_URBAN_D"
-                                              ,"model_year" = 2011:2015
-                                              ,"fuel" = "D"
-                                              ,"calendar_year" = 2016
-                                              ,"fleet_composition" = rep(0.2,5))
+fleet_data_ef_moves <- data.frame(  "veh_type" = "BUS_URBAN_D"
+                                  , "model_year" = 2011:2015
+                                  , "fuel" = "D"
+                                  , "calendar_year" = 2016
+                                  , "fleet_composition" = rep(0.2,5))
 fleet_data_ef_moves
 ```
 
-Environmental Company of São Paulo (CETESB, Brazil):
+Brazil: Environmental Company of São Paulo (CETESB):
 ```{r, message = FALSE}
-fleet_data_ef_cetesb <- data.table::data.table("veh_type" = c("BUS_MICRO_D"
-                                                              ,"BUS_URBAN_D"
-                                                              ,"BUS_ARTIC_D")
-                                               ,"model_year" = rep(2010, 3)
-                                               ,"fuel" = rep("D", 3)
-                                               ,"fleet_composition" = c(0.4, 0.4, 0.2))
+fleet_data_ef_cetesb <- data.table::data.table(  "veh_type" = c("BUS_MICRO_D", "BUS_URBAN_D", "BUS_ARTIC_D")
+                                               , "model_year" = c(2010, 2012, 2018)
+                                               , "fuel" = rep("D", 3)
+                                               , "fleet_composition" = c(0.4, 0.4, 0.2))
 fleet_data_ef_cetesb
 ```
 
 
 ## 3. Emission model
+
+Finally, we use the `emission_model()` function to estimate hot exhaust emissions of our public transport system.
+
 
 
 To generate the emission results, we couple the results from `transport_model()` along with the `fleet_data` previously imported. The `emission_model` generates a list of several files related to emissions, storing information such as vehicle variables (`fuel`, `age`, `tech`, `euro`, `fleet_composition`), travel variables (`slope`, `load`, `gps`) or pollution (`EF`, `emi`).
