--- a/vignettes/gtfs2emis_intro_vignette.Rmd
+++ b/vignettes/gtfs2emis_intro_vignette.Rmd
@@ -125,18 +125,18 @@ Now, the fleet data needs to be organized according to the data requirements of 
 |`ef_emep_europe()`      |Europe | EMEP/EEA      | Micro, Standard, Articulated | Fuel, EURO stage, technology, load, slope|
 |`ef_moves_usa()`        |US     | EMFAC         | Urban Buses                  | Age, Fuel                                |
 |`ef_emfac_usa()`        |US     | MOVES U.S EPA | Urban Buses                  | Age, Fuel                                |
-
+** [666] acho q o nome das funcoes ficariam melhor se seguissem o padrao `ef_pais_fonte`. Tipo `ef_brazil_cetesb()`, `ef_usa_moves()`, `ef_usa_emfac()`. Isso facilita pro usuario usar a funcao de autocomplete do rstudio quando estiver escrecendo o codigo**
 
 Here are a few examples of data.frames with the fleet characteristics required by different emission factor models. Note that the table includes a column `fleet_composition`. This column tells what proportion of the fleet is represented by vehicles with each characteristic.
 
 **Europe: EMEP/EEA**
 
 ```{r, message = FALSE}
-fleet_data_ef_europe <- data.frame(  "veh_type" = c("Ubus Midi <=15 t","Ubus Std 15 - 18 t" ,"Ubus Artic >18 t")
-                                   , "euro" = c("III","IV","V")
-                                   , "fuel" = rep("D",3)
-                                   , "tech" = c("-","SCR","SCR") #[666] o q significa o tracinho? nao tem info de tech daquele veiculo? nesse caso, o q o modelo faz?
-                                   , "fleet_composition" = c(0.4,0.5,0.1)) #
+fleet_data_ef_europe <- data.frame(  veh_type = c("Ubus Midi <=15 t","Ubus Std 15 - 18 t" ,"Ubus Artic >18 t")
+                                   , euro = c("III","IV","V")
+                                   , fuel = rep("D",3)
+                                   , tech = c("-","SCR","SCR") #[666] o q significa o tracinho? nao tem info de tech daquele veiculo? nesse caso, o q o modelo faz?
+                                   , fleet_composition = c(0.4,0.5,0.1)) #
 fleet_data_ef_europe
 ```
 
@@ -144,47 +144,46 @@ fleet_data_ef_europe
 **United States: EMFAC - California Air Resources Board**
 
 ```{r, message = FALSE}
-fleet_data_ef_emfac <- data.frame(  "veh_type" = "BUS_URBAN_D"
-                                  , "model_year" = 2011:2015
-                                  , "fuel" = "D"
-                                  , "calendar_year" = 2019
-                                  , "fleet_composition" = rep(0.2,5))
+fleet_data_ef_emfac <- data.frame(  veh_type = "BUS_URBAN_D"
+                                  , model_year = 2011:2015
+                                  , fuel = "D"
+                                  , calendar_year = 2019
+                                  , fleet_composition = rep(0.2,5))
 fleet_data_ef_emfac
 ```
 
 United States: Motor Vehicle Emission Simulator (MOVES) from Environmental Protection Agency:
 ```{r, message = FALSE}
-fleet_data_ef_moves <- data.frame(  "veh_type" = "BUS_URBAN_D"
-                                  , "model_year" = 2011:2015
-                                  , "fuel" = "D"
-                                  , "calendar_year" = 2016
-                                  , "fleet_composition" = rep(0.2,5))
+fleet_data_ef_moves <- data.frame(  veh_type = "BUS_URBAN_D"
+                                  , model_year = 2011:2015
+                                  , fuel = "D"
+                                  , calendar_year = 2016
+                                  , fleet_composition = rep(0.2,5))
 fleet_data_ef_moves
 ```
 
 Brazil: Environmental Company of São Paulo (CETESB):
 ```{r, message = FALSE}
-fleet_data_ef_cetesb <- data.table::data.table(  "veh_type" = c("BUS_MICRO_D", "BUS_URBAN_D", "BUS_ARTIC_D")
-                                               , "model_year" = c(2010, 2012, 2018)
-                                               , "fuel" = rep("D", 3)
-                                               , "fleet_composition" = c(0.4, 0.4, 0.2))
+fleet_data_ef_cetesb <- data.frame( veh_type = c("BUS_MICRO_D", "BUS_URBAN_D", "BUS_ARTIC_D")
+                                  , model_year = c(2010, 2012, 2018)
+                                  , fuel = rep("D", 3)
+                                  , fleet_composition = c(0.4, 0.4, 0.2))
 fleet_data_ef_cetesb
 ```
 
 
 ## 3. Emission model
 
-Finally, we use the `emission_model()` function to estimate hot exhaust emissions of our public transport system.
+Finally, we use the `emission_model()` function to estimate hot exhaust emissions of our public transport system. Here, the user needs to pass the results from `transport_model()`, some fleet data as described above, and select which emission factor model and pollutants should be considered. The `emission_model()` generates a list with several files ?[666 files? ou vectors?] with emission estimates, storing information such as vehicle variables (`fuel`, `age`, `tech`, `euro`, `fleet_composition`), travel variables (`slope`, `load`, `gps`) or pollution (`EF`, `emi`). 
 
-
-
-To generate the emission results, we couple the results from `transport_model()` along with the `fleet_data` previously imported. The `emission_model` generates a list of several files related to emissions, storing information such as vehicle variables (`fuel`, `age`, `tech`, `euro`, `fleet_composition`), travel variables (`slope`, `load`, `gps`) or pollution (`EF`, `emi`).
+**[666] o modelos ainda nao calcula slopes, neh? sera q vale a pena manter isso no output? Pq se sim, entao tem q ter alguma explicacao na documentacao de qual valor esta sendo utilizado**
 
 ```{r, message = FALSE}
-sf_emis <- emission_model(gps = tp_model
-                          ,ef_data_base = "emep_europe"
-                          ,fleet_data = fleet_data_ef_europe
-                          ,pollutant = c("CO","PM10","CO2","CH4","NOx"))
+sf_emis <- emission_model( gps = tp_model
+                          , ef_data_base = "emep_europe"
+                          , fleet_data = fleet_data_ef_europe
+                          , pollutant = c("CO","PM10","CO2","CH4","NOx")
+                          )
 class(sf_emis)
 names(sf_emis)
 ```
